# Passwords-keeper

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  users.db
back/src/: main.rs
back/src/endpoints/: auth.rs  mod.rs
front/: main.py
migrations/2023-04-22-101613_users/: up.sql
src/: guards.rs  main.rs  models.rs
src/endpoints/: get_vault.rs  register.rs  update_key.rs  update_vault.rs
