[package]
name = "Passwords-keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
simple-log = "1.6.0"
log = "0.4.17"
diesel = { version = "2.0.4", features = ["sqlite"]}

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_sqlite_pool"]
